Week 1/errors.txt
Hi.java:1: error: class hi is public, should be declared in a file named hi.java
public class hi {
       ^
1 error
Hi.java:3: error: ')' expected
		System.out.println(Hello, world!");
		                               ^
Hi.java:3: error: unclosed string literal
		System.out.println(Hello, world!");
		                                ^
Hi.java:3: error: ';' expected
		System.out.println(Hello, world!");
		                                   ^
Hi.java:5: error: reached end of file while parsing
}
 ^
4 errors
Hi.java:3: error: unclosed string literal
		System.out.println("Hello, world!);
		                   ^
Hi.java:3: error: ';' expected
		System.out.println("Hello, world!);
		                                   ^
Hi.java:5: error: reached end of file while parsing
}
 ^
3 errors
Hi.java:3: error: cannot find symbol
		System.out.printline("Hello, world!");
		          ^
  symbol:   method printline(String)
  location: variable out of type PrintStream
1 error
Hi.java:3: error: ';' expected
		System.out.println("Hello, world!")
		                                   ^
1 error
Hi.java:4: error: reached end of file while parsing
	}
	 ^
1 error
